--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 08 12:07:55 CST 2024
-sdk.dir=C\:\\Users\\s566903\\AppData\\Local\\Android\\Sdk
+#Sun Dec 08 16:37:47 CST 2024
+sdk.dir=C\:\\Users\\leela\\AppData\\Local\\Android\\Sdk
